# jobsbot

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: jobsbot.service
src/jobsbot/: bot.py  config.py  keyboards.py  logging_setup.py  middlewares.py  states.py  texts.py  validation.py
src/jobsbot/handlers/: apply.py  jobs.py  start.py
src/jobsbot/services/: admin_notify.py  jobs_api.py  storage.py
tests/: test_apply_guards.py  test_config.py  test_jobs_api.py  test_jobs_render.py  test_storage.py  test_throttle.py  test_validation.py
