[project]
name = "jobsbot"
version = "0.1.0"
description = "Telegram bot for browsing jobs and submitting applications (Uzbek)."
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "aiogram>=3.13,<4",
    "aiosqlite>=0.20",
    "aiohttp>=3.10",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/jkhusanov/jobsbot"
Repository = "https://github.com/jkhusanov/jobsbot"
Issues = "https://github.com/jkhusanov/jobsbot/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7.6",
]

[project.scripts]
jobsbot = "jobsbot.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
